--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@redux-devtools/core": "^3.13.1",
     "@testing-library/user-event": "^13.5.0",
